Fix for background scrolling behind modals

--- a/pkmnlist/css/styles.scss
+++ b/pkmnlist/css/styles.scss
@@ -482,6 +482,8 @@ header {
 
     &-fixed-page {
         overflow: hidden;
+		width: 100%;
+		height: 100%;
     }
 
     &-trigger {
@@ -504,6 +506,7 @@ header {
 			justify-content: center;
 			align-items: center;
 			flex: 0 0 100px;
+			font-size: 12px;
 		}
 		
 		label:first-of-type {
